zedboard/wrk/ps_freertos_tasksexp/sw/.metadata/.plugins/org.eclipse.cdt.ui/task_examples.build.log
22:58:09 **** Build of configuration Debug for project task_examples ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../tasks/init_task.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"tasks/init_task.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../task_examples_bsp/ps7_cortexa9_0/include -MMD -MP -MF"tasks/init_task.d" -MT"tasks/init_task.o" -o "tasks/init_task.o" "../tasks/init_task.c"
../tasks/init_task.c: In function 'vTimerCallback':
../tasks/init_task.c:84:17: error: 'xRxTask' undeclared (first use in this function); did you mean 'prvRxTask'?
    vTaskDelete( xRxTask );
                 ^~~~~~~
                 prvRxTask
../tasks/init_task.c:84:17: note: each undeclared identifier is reported only once for each function it appears in
../tasks/init_task.c:85:17: error: 'xTxTask' undeclared (first use in this function); did you mean 'xRxTask'?
    vTaskDelete( xTxTask );
                 ^~~~~~~
                 xRxTask
make: *** [tasks/init_task.o] Error 1

22:58:09 Build Finished (took 75ms)

